--- a/css.css
+++ b/css.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background : linear-gradient(165deg,blue,rgb(0 255 119) 80%) no-repeat;
+    background :linear-gradient(165deg,#00006b,#b90000 80%) no-repeat;
     background-attachment: fixed;
 }
 ::-webkit-scrollbar{
@@ -68,12 +68,12 @@ input[type=text]:focus {
   
 input[type=submit] {
     width: 100%;
-    background-image:linear-gradient(165deg,blue,cyan);
+    background-image:linear-gradient(165deg,#00006b,#b90000 80%);
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
-    border-radius: 5px;
+    border-radius: 20px;
     cursor: pointer;
     font-family: 'Lobster', cursive;
 }
